// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell children 1`] = `
<div
  class="za-cell"
>
  <div
    class="za-cell-inner"
  >
    <div
      class="za-cell-header"
    />
    <div
      class="za-cell-body"
    >
      <div
        class="za-cell-content"
      >
        this is children!
      </div>
    </div>
    <div
      class="za-cell-footer"
    />
  </div>
</div>
`;

exports[`Cell description 1`] = `
<div
  class="za-cell"
>
  <div
    class="za-cell-inner"
  >
    <div
      class="za-cell-header"
    />
    <div
      class="za-cell-body"
    >
      <div
        class="za-cell-title"
      >
        标题文字
      </div>
    </div>
    <div
      class="za-cell-footer"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`Cell help 1`] = `
<div
  class="za-cell"
>
  <div
    class="za-cell-inner"
  >
    <div
      class="za-cell-header"
    />
    <div
      class="za-cell-body"
    >
      <div
        class="za-cell-title"
      >
        标题文字
      </div>
    </div>
    <div
      class="za-cell-footer"
    >
      描述文字
    </div>
  </div>
  <div
    class="za-cell-help"
  >
    <span>
      message
    </span>
  </div>
</div>
`;

exports[`Cell icon 1`] = `
<div
  class="za-cell has-icon"
>
  <div
    class="za-cell-inner"
  >
    <div
      class="za-cell-header"
    >
      <div
        class="za-cell-icon"
      >
        <img
          alt=""
          src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
        />
      </div>
    </div>
    <div
      class="za-cell-body"
    >
      <div
        class="za-cell-title"
      >
        标题文字
      </div>
    </div>
    <div
      class="za-cell-footer"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`Cell onClick 1`] = `
<div
  className="za-cell is-link has-arrow"
  onClick={[Function]}
  onTouchStart={[Function]}
>
  <div
    className="za-cell-inner"
  >
    <div
      className="za-cell-header"
    />
    <div
      className="za-cell-body"
    >
      <div
        className="za-cell-title"
      >
        标题文字
      </div>
    </div>
    <div
      className="za-cell-footer"
    >
      描述文字
    </div>
    <div
      className="za-cell-arrow"
    />
  </div>
</div>
`;

exports[`Cell renders correctly 1`] = `
<div
  class="za-cell"
>
  <div
    class="za-cell-inner"
  >
    <div
      class="za-cell-header"
    />
    <div
      class="za-cell-body"
    >
      <div
        class="za-cell-title"
      >
        标题文字
      </div>
    </div>
    <div
      class="za-cell-footer"
    />
  </div>
</div>
`;
